--- a/MoodleMD.ipynb
+++ b/MoodleMD.ipynb
@@ -7,7 +7,9 @@
     "tags": []
    },
    "source": [
-    "# Markdownify"
+    "# Markdownify\n",
+    "## Copyright 2023, Svetlin Tassev\n",
+    "## This file is copyrighted under GPL, v3."
    ]
   },
   {
